[gd_scene load_steps=12 format=2]

[ext_resource path="res://Images/Enemies/zombie_stand.png" type="Texture" id=1]
[ext_resource path="res://Images/Enemies/zombie_walk1.png" type="Texture" id=2]
[ext_resource path="res://Images/Enemies/zombie_hold2.png" type="Texture" id=3]
[ext_resource path="res://Images/Enemies/zombie_hurt.png" type="Texture" id=4]
[ext_resource path="res://Images/Enemies/zombie_hold1.png" type="Texture" id=5]
[ext_resource path="res://Images/Enemies/zombie_idle.png" type="Texture" id=6]
[ext_resource path="res://Images/Enemies/zombie_walk2.png" type="Texture" id=7]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "hold",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 29.7253
height = 29.399

[sub_resource type="CapsuleShape2D" id=3]
radius = 61.2139
height = 1.37393

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "hold"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8.63708, 11.7094 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -8.21622, 12.9112 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="GroundCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -36.973, 0.293442 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="GroundCheckRight" type="RayCast2D" parent="."]
position = Vector2( 20.2471, 0.293449 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="WallCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -23.1815, 0 )
enabled = true
cast_to = Vector2( -30, 0 )

[node name="WallCheckRight" type="RayCast2D" parent="."]
position = Vector2( 10.2703, 0.293442 )
enabled = true
cast_to = Vector2( 30, 0 )
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
